# axum-template

./: Cargo.toml  justfile
.github/workflows/: ci.yml
bruno/: Hello World.bru  bruno.json  foo.bru
bruno/learn/: folder.bru
bruno/v1/health/: GET health.bru
docs/: axum.excalidraw  axum.md  postgres.md  rust.md  sqlx.md  tower.md
migrations/: 20250820160950_pgcrypto.sql
src/: config.rs  db.rs  lib.rs  main.rs  state.rs
src/web/: mod.rs
src/web/routes/: mod.rs
src/web/routes/v1/: health.rs  mod.rs
tests/: health_check.rs
